--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "gsm/csl"]
 	path = gsm/csl
-	url = https://gitlab.cis.lmu.de/CLARIN/csl.git
+	url = https://github.com/cisocrgroup/csl.git
