--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 
 
 SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-unused -DXML_LIBRARY " )
-
-#SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O3 " )
+SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O3 " )
+SET(CMKAE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -Wdisabled-optimization")
 #SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O1 " )
 #SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O0 -ggdb " )
 #SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -g " )
