--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,9 @@ IF( XERCES_FOUND )
 ENDIF( XERCES_FOUND )
 
 add_subdirectory(AbbyyXmlParser)
-add_subdirectory(Autocorrection)
 add_subdirectory(Alphabet)
 add_subdirectory(AltoXML)
+add_subdirectory(Autocorrection)
 add_subdirectory(CorrectionSystem)
 add_subdirectory(DictSearch)
 add_subdirectory(DocEvaluation)
@@ -77,6 +77,7 @@ add_subdirectory(GlobalProfile)
 add_subdirectory(INIConfig)
 add_subdirectory(LevDEA)
 add_subdirectory(LevenshteinWeights)
+add_subdirectory(Llocs)
 add_subdirectory(MinDic)
 add_subdirectory(Pattern)
 add_subdirectory(Profiler)
