--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 
 
 
-SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-unused -DXML_LIBRARY " )
+SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-unused -std=c++11 -DXML_LIBRARY " )
 SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O3 " )
 SET(CMKAE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -Wdisabled-optimization")
 #SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -O1 " )
