--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ SET( OCRCORRECTION_SOURCES
 	     Profiler/Profiler.cxx
 	     Profiler/AdaptiveProfiling.cxx
 	     Profiler/AdaptiveHistGtLex.cxx
+	     Profiler/RecPrec.cxx
 	     Profiler/HTMLWriter.cxx
 	     Profiler/Evaluation.cxx
 	     Profiler/SimpleOutputWriter.cxx
