improve handling of non spacing marks

--- a/AbbyyXmlParser/CMakeLists.txt
+++ b/AbbyyXmlParser/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable( abbyy_transform exec_abbyy_transform.cxx )
-target_link_libraries( abbyy_transform Pattern OCRCorrection Pattern)
-
-add_executable( testAbbyyXmlParser testAbbyyXmlParser.cxx )
-target_link_libraries( testAbbyyXmlParser Pattern OCRCorrection Pattern)
+## add_executable( abbyy_transform exec_abbyy_transform.cxx )
+## target_link_libraries( abbyy_transform ${ICU_LIBRARIES} Pattern OCRCorrection Pattern )
+##
+## add_executable( testAbbyyXmlParser testAbbyyXmlParser.cxx )
+## target_link_libraries( testAbbyyXmlParser ${ICU_LIBRARIES} Pattern OCRCorrection Pattern )
