--- a/DocXML/Test/CMakeLists.txt
+++ b/DocXML/Test/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable( testDocXML exec_testDocXML.cxx)
-target_link_libraries( testDocXML OCRCorrection )
+## add_executable( testDocXML exec_testDocXML.cxx)
+## target_link_libraries( testDocXML OCRCorrection )
