--- a/CorrectionSystem/CMakeLists.txt
+++ b/CorrectionSystem/CMakeLists.txt
@@ -1,11 +1,11 @@
-add_library( CorrectionSystem STATIC CorrectionSystem.cxx )
+add_library( CorrectionSystem STATIC CorrectionSystem.cxx ${ICU_LIBRARIES})
 
 add_executable( execCorrectionSystem execCorrectionSystem.cxx )
-target_link_libraries( execCorrectionSystem OCRCorrection )
+target_link_libraries( execCorrectionSystem OCRCorrection ${ICU_LIBRARIES})
 
 add_executable( testCorrectionSystem testCorrectionSystem.cxx )
-target_link_libraries( testCorrectionSystem OCRCorrection )
+target_link_libraries( testCorrectionSystem OCRCorrection ${ICU_LIBRARIES})
 
 
 add_executable(  prepareDocument exec_prepareDocument.cxx )
-target_link_libraries( prepareDocument OCRCorrection )
+target_link_libraries( prepareDocument OCRCorrection ${ICU_LIBRARIES})
