--- a/Pattern/CMakeLists.txt
+++ b/Pattern/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library( Pattern Instruction.cxx Interpretation.cxx PatternWeights.cxx ComputeInstruction.cxx Pattern.cxx)
-
-add_subdirectory( Test )
+#target_link_libraries(Pattern ${ICU_LIBRARIES})
+#add_subdirectory( Test )
