--- a/Val/Test/CMakeLists.txt
+++ b/Val/Test/CMakeLists.txt
@@ -1,5 +1,5 @@
-IF( CPPUNIT_FOUND )
- add_executable( testVal testVal.cxx )
- target_link_libraries( testVal Pattern Utils ${CPPUNIT_LIBRARIES} )
-
-ENDIF( CPPUNIT_FOUND )
+## IF( CPPUNIT_FOUND )
+##  add_executable( testVal testVal.cxx )
+##  target_link_libraries( testVal ${ICU_LIBRARIES} Pattern Utils ${CPPUNIT_LIBRARIES} )
+##
+## ENDIF( CPPUNIT_FOUND )
