use static LEX and CACHE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ SET( OCRCORRECTION_SOURCES
 	     LevenshteinWeights/LevenshteinWeights.cxx
 	     Profiler/Profiler.cxx
 	     Profiler/AdaptiveProfiling.cxx
-	     Profiler/AdaptiveHistGtLex.cxx
+	     Profiler/AdaptiveLex.cxx
 	     Profiler/RecPrec.cxx
 	     Profiler/HTMLWriter.cxx
 	     Profiler/Evaluation.cxx
