--- a/DictSearch/CMakeLists.txt
+++ b/DictSearch/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library( DictSearch STATIC DictSearch.cxx AdaptiveLex.cxx)
+add_library( DictSearch STATIC DictSearch.cxx AdaptiveLex.cxx UnknownVirtualLex.cxx)
 target_link_libraries(DictSearch LevDEA INIConfig)
 add_subdirectory( Test )
