Add basic cache interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,11 +87,12 @@ SET( OCRCORRECTION_SOURCES
 	     Document/Document.cxx
 	     CorrectionSystem/CorrectionSystem.cxx
 	     LevenshteinWeights/LevenshteinWeights.cxx
-	     Profiler/Profiler.cxx
 	     Profiler/AdaptiveProfiling.cxx
+	     Profiler/Cache.cxx
+	     Profiler/Evaluation.cxx
 	     Profiler/Evaluator.cxx
 	     Profiler/HTMLWriter.cxx
-	     Profiler/Evaluation.cxx
+	     Profiler/Profiler.cxx
 	     Profiler/SimpleOutputWriter.cxx
 	     AbbyyXmlParser/AbbyyXmlParser.cxx
 	     DocXML/DocXMLReader.cxx
