Remove check for cppunit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,11 +40,11 @@ INCLUDE_DIRECTORIES( "." ${JAVA_INCLUDE_PATH} ${JAVA_INCLUDE_PATH2} )
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules/")
 
 ##### CPPUNIT ##############
-SET( USER_SOFTWARE_DIR /mounts/Users/student/uli/soft )
+#SET( USER_SOFTWARE_DIR /mounts/Users/student/uli/soft )
 #  Finds:
 #   CPPUNIT_INCLUDE_DIR
 #   CPPUNIT_LIBRARIES
-FIND_PACKAGE( CPPUNIT REQUIRED)
+FIND_PACKAGE( CPPUNIT )#REQUIRED)
 IF( CPPUNIT_FOUND )
  INCLUDE_DIRECTORIES( ${CPPUNIT_INCLUDE_DIR} )
 ENDIF( CPPUNIT_FOUND )
