Remove requirement for cppunit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ SET( USER_SOFTWARE_DIR /mounts/Users/student/uli/soft )
 #  Finds:
 #   CPPUNIT_INCLUDE_DIR
 #   CPPUNIT_LIBRARIES
-FIND_PACKAGE( CPPUNIT REQUIRED)
+FIND_PACKAGE( CPPUNIT )#REQUIRED)
 IF( CPPUNIT_FOUND )
  INCLUDE_DIRECTORIES( ${CPPUNIT_INCLUDE_DIR} )
 ENDIF( CPPUNIT_FOUND )
