--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,11 +155,11 @@ install(
 #
 set(
   OCRCORRECTION_HEADERS
-  "profiler.h"
-  "Global.h"
-  "Stopwatch.h"
   "Exceptions.h"
+  "Global.h"
   "Mainpage.h"
+  "profiler.h"
+  "Stopwatch.h"
   )
 install(
   FILES ${OCRCORRECTION_HEADERS}
@@ -167,50 +167,52 @@ install(
   )
 set(
   OCRCORRECTION_DIRECTORIES
-  "CreateXML"
-  "Val"
-  "CorrectionSystem"
-  "MinDic"
-  "SimpleEnrich"
-  "FBDicString"
-  "Getopt"
-  "MSMatch"
-  "jni"
+  "AbbyyXmlParser"
+  "Alphabet"
+  "AlphaScore"
   "AltoXML"
-  "Hash"
+  "Candidate"
+  "CorrectionSystem"
+  "CreateXML"
+  "DictSearch"
+  "DocEvaluation"
+  "Document"
   "DocXML"
   "ExtReader"
-  "Vaam"
-  "PatternCounter"
-  "IBMGroundtruth"
-  "Pattern"
-  "AlphaScore"
-  "DictSearch"
-  "Alphabet"
-  "DocEvaluation"
-  "LevenshteinWeights"
-  "LevDistance"
-  "ResultSet"
-  "Utils"
-  "Token"
+  "FBDic"
+  "FBDicString"
+  "Getopt"
   "GlobalProfile"
-  "Candidate"
-  "iDictionary"
-  "Profiler"
-  "SimpleXMLReader"
-  "AbbyyXmlParser"
-  "TXTReader"
-  "LevDEA"
-  "INIConfig"
   "GtDoc"
-  "Document"
+  "Hash"
+  "IBMGroundtruth"
+  "iDictionary"
+  "INIConfig"
+  "jni"
+  "LevDEA"
+  "LevDistance"
+  "LevenshteinWeights"
   "LevFilter"
+  "MinDic"
+  "MSMatch"
+  "Pattern"
+  "PatternCounter"
+  "Profiler"
+  "ResultSet"
+  "SimpleEnrich"
+  "SimpleXMLReader"
+  "Token"
+  "TransTable"
+  "TXTReader"
+  "Utils"
+  "Vaam"
+  "Val"
   )
 install(
   DIRECTORY ${OCRCORRECTION_DIRECTORIES}
   DESTINATION include/profiler
   FILES_MATCHING
-  REGEX ".*\\.[th](cc)?$"
+  REGEX ".*\\.[th]([cpx][cpx])?$"
   PATTERN "*Test*" EXCLUDE
   )
 
